Replace EVM x402 with Solana-native x402
- New x402-solana.ts middleware for SPL/SOL payments
- Updated provider example with Solana payment verification
- Updated consumer example for Solana x402 flow
- Removed EVM dependencies (@x402/evm, viem, etc.)
- Fixed repo URL to thatshrimple/agentalpha

x402 flow now:
1. GET /signal/latest -> 402 with Solana payment details
2. Client sends SOL transfer on-chain
3. Client retries with X-Payment: <tx-signature>
4. Server verifies tx and serves signal

--- a/package.json
+++ b/package.json
@@ -30,21 +30,14 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/agentalpha/agentalpha"
+    "url": "https://github.com/thatshrimple/agentalpha"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
     "@solana/web3.js": "^1.98.4",
-    "@x402/axios": "^2.2.0",
-    "@x402/core": "^2.2.0",
-    "@x402/evm": "^2.2.0",
-    "@x402/express": "^2.2.0",
-    "@x402/fetch": "^2.2.0",
-    "axios": "^1.13.4",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "viem": "^2.45.1"
+    "express": "^5.2.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
