--- a/package.json
+++ b/package.json
@@ -41,15 +41,15 @@
     "@solana/web3.js": "^1.98.4",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "tsx": "^4.19.0",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.2.0",
     "concurrently": "^9.1.0",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.0",
-    "typescript": "^5.9.3"
+    "ts-node": "^10.9.2"
   }
 }
